# shale

./: Cargo.toml  rustfmt.toml
src/: compact.rs  lib.rs  util.rs
