[package]
name = "shale"
version = "0.1.9"
edition = "2021"
description = "Useful abstraction and light-weight implemenation for a key-value store."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
lru = "0.12.2"
parking_lot = "0.12.1"
